# liven_beta

./: .gitignore  Cargo.toml  README.md  callgraph.db-shm  callgraph.db-wal  python_callgraph.db  python_callgraph.db-shm  python_callgraph.db-wal
src/: indexing.rs  main.rs
src/open_source/: auth.rs  indexing.rs  lib.rs  main.rs  python_indexing.rs  typescript_indexing.rs
src/server/: embeddings.rs  indexing.rs  main.rs  python_indexing.rs  server.rs
test_typescript_project/: fileA.ts  fileB.ts
